# AR100_MM

anscer_description/urdf/: anscer_description_params.xacro
anscer_multi_map_navigation/: CMakeLists.txt  README.md  package.xml
anscer_multi_map_navigation/action/: NavigateToGoalMap.action
anscer_multi_map_navigation/config/: initial_poses.yaml
anscer_multi_map_navigation/database/: wormholes.db  wormholes_schema.sql
anscer_multi_map_navigation/include/anscer_multi_map_navigation/: navigation_action_server.h  switch_map.h  wormhole_manager.h
anscer_multi_map_navigation/launch/: anscer_multi_map_server.launch
anscer_multi_map_navigation/maps/: map2.pgm  map2.yaml
anscer_multi_map_navigation/scripts/: plot_latest_trajectory.py
anscer_multi_map_navigation/src/: navigation_action_server.cpp  switch_map.cpp  wormhole_manager.cpp
anscer_multi_map_navigation/trajectories/: trajectory_map1_to_map1_3065_succeeded.csv  trajectory_map1_to_map1_3146_succeeded.csv  trajectory_map1_to_map1_3410_succeeded.csv  trajectory_map2_to_map2_2976_succeeded.csv  trajectory_map2_to_map2_3184_succeeded.csv  trajectory_map2_to_map2_3228_succeeded.csv
anscer_navigation/launch/: anscer_navigation.launch
anscer_navigation/launch/include/: common.launch.xml
anscer_navigation/maps/: map_1.pgm
